--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=
 spring.jpa.show-sql=true
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
